# MusicPlayer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: audioanalyzer.cpp  audioanalyzer.h  discwidget.cpp  discwidget.h  library.cpp  library.h  lrcparser.cpp  lrcparser.h  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  playlist.cpp  playlist.h  playmodestrategy.cpp  playmodestrategy.h  spectrumwidget.cpp  spectrumwidget.h  track.h  transcoder.cpp  transcoder.h
test_songs/lyrics/: IF YOU.lrc  Orange Moon.lrc
